# PolyDataCompression

./: CMakeLists.txt  PolyDataCompression.cxx  PolyDataCompression.xml  README.md  VTKCompression.cxx  VTKCompression.xml
Testing/: CMakeLists.txt  vtkTestMain.h
Testing/Data/: baseline-compressed.vtk  corpusCallosum_F_F.vtp  dwi.nhdr  inputT2-test.nrrd  inputT2-test2.nrrd  inputT2-test3.nrrd  mesh-compressed.vtk  mesh.vtk
